[[new]]
= What's New in Spring Security 6.2

Spring Security 6.2 provides a number of new features.
Below are the highlights of the release.
