@@ -4,3 +4,6 @@
 Spring Security 6.2 provides a number of new features.
 Below are the highlights of the release.
 
+== Configuration
+
+* https://github.com/spring-projects/spring-security/issues/5011[gh-5011] - xref:servlet/integrations/cors.adoc[(docs)] Automatically enable `.cors()` if `CorsConfigurationSource` bean is present
